--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,56 +1,50 @@
 doctype html
-html(lang='en')
-  head
+head
     // Required Meta Tags
     meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    meta(http-equiv='X-UA-Compatible', content='ie=edge')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    meta(http-equiv='X-UA-Compatible' content='ie=edge')
     // Page Title
     title Foodfun
     // Favicon
-    link(rel='shortcut icon', href='assets/images/logo/favicon.png', type='image/x-icon')
+    link(rel='shortcut icon' href='assets/images/logo/favicon.png' type='image/x-icon')
     // CSS Files
-    link(rel='stylesheet', href='assets/css/animate-3.7.0.css')
-    link(rel='stylesheet', href='assets/css/font-awesome-4.7.0.min.css')
-    link(rel='stylesheet', href='assets/css/bootstrap-4.1.3.min.css')
-    link(rel='stylesheet', href='assets/css/owl-carousel.min.css')
-    link(rel='stylesheet', href='assets/css/jquery.datetimepicker.min.css')
-    link(rel='stylesheet', href='assets/css/style.css')
-  body
-    // Preloader Starts
-    .preloader
-      .spinner
-    // Preloader End
-    // Header Area Starts
-    header.header-area
-      .container
+    link(rel='stylesheet' href='/assets/css/animate-3.7.0.css')
+    link(rel='stylesheet' href='/assets/css/font-awesome-4.7.0.min.css')
+    link(rel='stylesheet' href='/assets/css/bootstrap-4.1.3.min.css')
+    link(rel='stylesheet' href='/assets/css/owl-carousel.min.css')
+    link(rel='stylesheet' href='/assets/css/jquery.datetimepicker.min.css')
+    link(rel='stylesheet' href='/assets/css/style.css')
+// Header Area Starts
+header.header-area
+    .container
         .row
-          .col-lg-2
-            .logo-area
-              a(href='/')
-                img(src='assets/images/logo/logo.png', alt='logo')
-          .col-lg-10
-            .custom-navbar
-              span
-              span
-              span
-            .main-menu
-              ul
-                li.active
-                  a(href='/') home
-                li
-                  a(href='/about') about
-                li
-                  a(href='/menu') menu
-                li
-                  a(href='#') blog
-                  ul.sub-menu
-                    li
-                      a(href='/blog-home') Blog Home
-                    li
-                      a(href='/blog-details') Blog Details
-                li
-                  a(href='/contact') contact
-                li
-                  a(href='/elements') Elements
-    // Header Area End
+            .col-lg-2
+                .logo-area
+                    a(href='index.html')
+                        img(src='/assets/images/logo/logo.png' alt='logo')
+            .col-lg-10
+                .custom-navbar
+                    span
+                    span
+                    span
+                .main-menu
+                    ul
+                        li.active
+                            a(href='/') home
+                        li
+                            a(href='about.html') about
+                        li
+                            a(href='menu.html') menu
+                        li
+                            a(href='#') blog
+                            ul.sub-menu
+                                li
+                                    a(href='blog-home.html') Blog Home
+                                li
+                                    a(href='blog-details.html') Blog Details
+                        li
+                            a(href='contact-us.html') contact
+                        li
+                            a(href='elements.html') Elements
+// Header Area End
